update + image upload
