# server/routes/productRoutes.js
@@ -1,9 +1,10 @@
 import express from 'express'
 const router = express.Router();
-import {createProduct} from '../controllers/productController.js'
-import {authMiddleware} from '../middleware/auth.js'   // Middleware to authenticate user
+import {createProduct, updateProduct, deleteProduct} from '../controllers/productController.js'
+import {authMiddleware} from '../middleware/auth.js'
 
-router.post('/create', authMiddleware, createProduct);
-// productRoutes.post('/create', authMiddleware, updateProduct);
+router.post('/create', createProduct);
+router.post('/update', authMiddleware, updateProduct);
+router.delete('/product/:productId', authMiddleware, deleteProduct);
 
 export const productRoutes = router;
